Side Fix 2: Easier way to fix the previous commit with z-index

--- a/styles.css
+++ b/styles.css
@@ -356,7 +356,7 @@ textarea{
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 3; /* Sit on top */
+  z-index: 50; /* Sit on top */
   /*padding-top: 100px;  /* Location of the box */
   left: 0;
   top: 0;
